# earnings-call-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
notebooks/: 01_eda_and_model.ipynb
scripts/: oof_backtest.py
spaces/: Dockerfile  README.md  startup.sh
src/eca/: __init__.py  cli.py  config.py
src/eca/api/: __init__.py  main.py
src/eca/backtest/: __init__.py  engine.py
src/eca/features/: __init__.py  build.py  guidance.py  hedging.py  sentiment.py  tone_shift.py
src/eca/ingest/: __init__.py  edgar.py  hf_dataset.py  motley_fool.py  schema.py
src/eca/model/: __init__.py  predict.py  train.py
src/eca/prices/: __init__.py  yfinance_loader.py
src/eca/utils/: __init__.py  logging.py
tests/: conftest.py  test_api.py  test_backtest.py  test_features.py  test_model.py
